--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index"
+    "start": "nodemon index"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +14,7 @@
     "express-session": "^1.15.6",
     "express-socket.io-session": "^1.3.5",
     "mysql": "^2.16.0",
-    "npm": "^6.2.0",
+    "npm": "^6.4.1",
     "query_builder": "0.0.2",
     "socket.io": "^2.1.1"
   },
