--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log* 
 
-uploads/temp/*
-uploads/files/*
+uploads/temp/*.*
+uploads/files/*.*
 oc
 # Runtime data
 pids
