--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index",
-    "test": "nodemon -e js index " 
+    "test": "nodemon -e js index "
   },
   "keywords": [],
   "author": "",
@@ -14,10 +14,13 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "express-socket.io-session": "^1.3.5",
+    "jsonwebtoken": "^8.3.0",
     "mysql": "^2.16.0",
     "npm": "^6.4.1",
     "query_builder": "0.0.2",
-    "socket.io": "^2.1.1"
+    "socket.io": "^2.1.1",
+    "socketio-jwt": "^4.5.0",
+    "socketio-jwt-auth": "0.0.6"
   },
   "devDependencies": {
     "nodemon": "^1.18.3"
