--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "jsonwebtoken": "^8.3.0",
     "mysql": "^2.16.0",
     "npm": "^6.4.1",
+    "paypal-rest-sdk": "^1.8.1",
     "query_builder": "0.0.2",
     "socket.io": "^2.1.1",
     "socketio-jwt": "^4.5.0",
-    "socketio-jwt-auth": "0.0.6"
+    "socketio-jwt-auth": "0.0.6",
+    "validate.js": "^0.12.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.3"
